contact info footer, features and button wording - updated

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -25,7 +25,7 @@
 				<div class="col-lg-4 col-md-6 col-sm-12">
 					<div class="widget widget_link">
 						<div class="widget_title">
-							<h4>Essencial Links</h4>
+							<h4>Essential Links</h4>
 						</div>
 						<ul>
 							<li><a href="/about">About Us</a></li>
@@ -47,8 +47,8 @@
 									<i class="fas fa-phone-alt"></i>
 								</div>
 								<div class="info">
-									<p><a href="tel:+919246147999">1800-121-3637</a></p>
-									<p><a href="tel:+919246147999">+91 924-614-7999</a></p>
+									<p><a href="tel:7032253395">703.225.3395</a></p>
+									<p><a href="tel:7032253353">703.225.3353</a></p>
 								</div>
 							</div>
 							<div class="single_info">
@@ -56,8 +56,7 @@
 									<i class="fas fa-envelope"></i>
 								</div>
 								<div class="info">
-									<p><a href="mailto:info@deneb.com">info@deneb.com</a></p>
-									<p><a href="mailto:services@deneb.com">services@deneb.com</a></p>
+									<p><a href="mailto:admin@gekimlaw.com">admin@gekimlaw.com</a></p>
 								</div>
 							</div>
 							<div class="single_info">
@@ -65,7 +64,7 @@
 									<i class="fas fa-map-marker-alt"></i>
 								</div>
 								<div class="info">
-									<p>125, Park street aven, Brocklyn,<span>Newyork.</span></p>
+									<p>11325 Random Hills Road<br/>Suite 360-110<br/>Fairfax, VA 22030</p>
 								</div>
 							</div>
 						</div>
