--- a/_includes/latest-projects.html
+++ b/_includes/latest-projects.html
@@ -7,8 +7,8 @@
 		<div class="row">
 			<div class="col-lg-12">
 				<div class="section_title text-center">
-					<h2>Our Latest Projects</h2>
-					<p>When unknow printer took a gallery of type and scramblted it to make a type specimen book</p>
+					<h2>Find us on the web</h2>
+					<p>Our law firm has been featured in articles, presentations and webinars</p>
 				</div>
 			</div>
 		</div>
@@ -16,11 +16,11 @@
 			<div class="col-lg-12">
 				<div class="project_button text-center">
 					<button class="project_btn active_btn" data-filter="*">all</button>
-					<button class="project_btn" data-filter=".cat1">Web Design</button>
-					<button class="project_btn" data-filter=".cat2">Web Development</button>
-					<button class="project_btn" data-filter=".cat3">Branding</button>
+					<button class="project_btn" data-filter=".cat1">Articles</button>
+					<button class="project_btn" data-filter=".cat2">Presentations</button>
+					<button class="project_btn" data-filter=".cat3">Webinars</button>
 					<button class="project_btn" data-filter=".cat4">SEO</button>
-					<button class="project_btn" data-filter=".cat5">Mobile App</button>
+					<button class="project_btn" data-filter=".cat5">COPAA</button>
 				</div>
 			</div>
 		</div>
