edit content, change colors on some and changed logo

--- a/_includes/services-2.html
+++ b/_includes/services-2.html
@@ -45,14 +45,14 @@
 					      		</div>
 					      	</div>
 					    </div>
-					    <div id="strategy" class="tab-pane fade">
+					    <div id="IEP504" class="tab-pane fade">
 					      	<div class="row align-items-center">
 					      		<div class="col-lg-6">
 					      			<div class="deneb_content_box">
-					      				<h2>Strategy & Research</h2>
-					      				<p>Etiam suscipit sed sem nec elementum. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed accumsan, urna vel finibus sollicitudin, urna sem fringilla nisi.</p>
-					      				<p>In vel ante tristique, blandit nisi in, feugiat nisl. Nunc sagittis pretium arcu, ac consectetur diam feugiat vitae. Pellentesque sit amet elit facilisis, sodales nisl non, luctus ex. Donec molestie consequat velit, id imperdiet arcu sollicitudin.</p>
-					      				<p>Praesent ac tempus ipsum, eget consequat ante. Sed consequat, elit euismod finibus faucibus.</p>
+					      				<h2>Eligibility</h2>
+					      				<p>Students with disabilities require accomodations, services and extra support </p>
+					      				<p>The first step in this process is called initial eligibility. After a 504 or IEP has been established</p>
+					      				<p>the school team will re-evaluate the student every three years until the student graduates high school.</p>
 					      			</div>
 					      		</div>
 					      		<div class="col-lg-6">
