--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -11,8 +11,8 @@ $text: #7a808d;
 
 $title: #011a3e;
 
-$theme_color: #feb000;
-
+// $theme_color: #feb000;
+$theme_color: #0cc0df;
 
 // Responsive Variables
 $laptop: 'only screen and (min-width: 1200px)';
