--- a/_includes/contact-form-2.html
+++ b/_includes/contact-form-2.html
@@ -8,7 +8,7 @@
 				<p>{{ page.form.description }}</p>
 			</div>
 			<div class="contact_form">
-				<form action="https://formsubmit.co/send/{{ site.email }}">
+				<form action="https://formsubmit.co/{{ site.email }}">
 					<div class="row">
 						<div class="col-lg-6">
 							<div class="form_group">
