Added test links until we activate the main one.

--- a/_includes/contact-form-2.html
+++ b/_includes/contact-form-2.html
@@ -8,8 +8,9 @@
 				<p>{{ page.form.description }}</p>
 			</div>
 			<div class="contact_form">
-				<form action="https://formsubmit.co/{{ site.email }}">
-					<div class="row">
+				<!--form action="https://formsubmit.co/{{ site.email }}"-->
+				<form action="https://formsubmit.co/njdatta@gekimlaw.com">
+						<div class="row">
 						<div class="col-lg-6">
 							<div class="form_group">
 								<input type="text" class="form_control" placeholder="First Name" name="first_name" required>
