--- a/_includes/contact-area.html
+++ b/_includes/contact-area.html
@@ -13,7 +13,8 @@
 					<p>{{ page.contact_area.description }}</p>
 				</div>
 				<div class="contact_form">
-					<form method="post" action="https://formsubmit.co/{{ site.email }}">
+					<!--form method="post" action="https://formsubmit.co/{{ site.email }}"-->
+					<form method="post" action="https://formsubmit.co/njdatta@gekimlaw.com">
 						<div class="row">
 							<div class="col-lg-6">
 								<div class="form_group">
