Fixed method for contact form.

--- a/_includes/contact-form-2.html
+++ b/_includes/contact-form-2.html
@@ -8,8 +8,8 @@
 				<p>{{ page.form.description }}</p>
 			</div>
 			<div class="contact_form">
-				<!--form action="https://formsubmit.co/{{ site.email }}"-->
-				<form action="https://formsubmit.co/njdatta@gekimlaw.com">
+				<!--form method="POST" action="https://formsubmit.co/{{ site.email }}"-->
+				<form method="POST" action="https://formsubmit.co/njdatta@gekimlaw.com">
 						<div class="row">
 						<div class="col-lg-6">
 							<div class="form_group">
