corrected title wording, added some photos

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -43,7 +43,7 @@
 	</div>
 
 	<div class="widget widget_tag_cloud">
-		<h3 class="widget-title">Tages</h3>
+		<h3 class="widget-title">Tags</h3>
 		<ul>
 
 			{% capture tags %}
