--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -11,8 +11,7 @@ $text: #7a808d;
 
 $title: #011a3e;
 
-// $theme_color: #feb000;
-$theme_color: #0cc0df;
+$theme_color: #feb000;
 
 // Responsive Variables
 $laptop: 'only screen and (min-width: 1200px)';
@@ -20,3 +19,6 @@ $lg : 'only screen and (min-width: 992px) and (max-width: 1200px)';
 $md:'only screen and (min-width: 768px) and (max-width: 991px)';
 $xs:'(max-width: 767px)';
 $sm: 'only screen and (min-width: 576px) and (max-width: 767px)';
+
+/** Custom */
+$theme_color: #0cc0df;
