Created shadow color.

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -21,4 +21,5 @@ $xs:'(max-width: 767px)';
 $sm: 'only screen and (min-width: 576px) and (max-width: 767px)';
 
 /** Custom */
+$shadow_color: #466e8b;
 $theme_color: #0cc0df;
