--- a/_sass/_features.scss
+++ b/_sass/_features.scss
@@ -1,66 +1,77 @@
 // Deneb Cta css
-.deneb_cta{
-	.cta_wrapper{
+.deneb_cta {
+	.cta_wrapper {
 		padding: 45px 50px 42px;
 		max-width: 970px;
 		border-radius: 15px;
 		margin: auto;
 		margin-bottom: -135px;
 		position: relative;
-		background-image: -moz-linear-gradient( 0deg, rgb(255,189,39) 0%, rgb(254,176,0) 100%);
-		background-image: -webkit-linear-gradient( 0deg, rgb(255,189,39) 0%, rgb(254,176,0) 100%);
-		background-image: -ms-linear-gradient( 0deg, rgb(255,189,39) 0%, rgb(254,176,0) 100%);
-		box-shadow: 2.5px 4.33px 15px 0px rgba(254, 176, 0, 0.4);
+		/** Updated to use a variable instead of hardcoding it */
+		background-image: -moz-linear-gradient(0deg, $theme_color 0%, $theme_color 100%);
+		background-image: -webkit-linear-gradient(0deg, $theme_color 0%, $theme_color 100%);
+		background-image: -ms-linear-gradient(0deg, $theme_color 0%, $theme_color 100%);
+		box-shadow: 2.5px 4.33px 15px 0px $shadow_color;
 		z-index: 1;
-		&:after{
+
+		&:after {
 			content: '';
-		    background: url(../images/shape/cta_shape.png) no-repeat;
-		    background-position: bottom;
-		    width: 100%;
-		    height: 100%;
-		    position: absolute;
-		    bottom: 0;
-		    left: 0;
-		    z-index: -1;
+			background: url(../images/shape/cta_shape.png) no-repeat;
+			background-position: bottom;
+			width: 100%;
+			height: 100%;
+			position: absolute;
+			bottom: 0;
+			left: 0;
+			z-index: -1;
 		}
-		.cta_content{
-			h3{
-				@media #{$xs}{
+
+		.cta_content {
+			h3 {
+				@media #{$xs} {
 					font-size: 24px;
 				}
+
 				color: $white;
 				font-weight: bold;
-				&:after{
-    				content: '';
-				    display: block;
-				    background: url(../images/shape/line_2.png) no-repeat;
-				    max-width: 110px;
-				    height: 2px;
-				    margin-top: 13px;
-				    margin-bottom: 24px;
-    			}
+
+				&:after {
+					content: '';
+					display: block;
+					background: url(../images/shape/line_2.png) no-repeat;
+					max-width: 110px;
+					height: 2px;
+					margin-top: 13px;
+					margin-bottom: 24px;
+				}
 			}
-			p{
+
+			p {
 				color: $white;
 			}
 		}
-		.button_box{
-			@media #{$md}{
+
+		.button_box {
+			@media #{$md} {
 				float: none;
 				text-align: left;
 				margin-top: 30px;
 			}
-			@media #{$xs}{
+
+			@media #{$xs} {
 				float: none;
 				text-align: center;
 				margin-top: 30px;
 			}
+
 			float: right;
-			.deneb_btn{
+
+			.deneb_btn {
 				background: $white;
 				color: $title;
+
 				&:hover,
-				&:focus{
+				&:focus {
 					box-shadow: 2.5px 4.33px 15px 0px rgba(0, 0, 0, 0.15);
 				}
 			}
@@ -69,17 +80,19 @@
 }
 
 // deneb_achivement
-.deneb_achivement{
+.deneb_achivement {
 	padding-bottom: 120px;
 	position: relative;
 	z-index: 1;
-	.section_title{
-		@media #{$md}{
+
+	.section_title {
+		@media #{$md} {
 			margin: 0;
 			margin-bottom: 60px;
 		}
 	}
-	&:after{
+
+	&:after {
 		position: absolute;
 		content: '';
 		right: 25px;
@@ -90,101 +103,121 @@
 		height: 100%;
 		z-index: -1;
 	}
-	.deneb_content_box{
-		p{
+
+	.deneb_content_box {
+		p {
 			margin-bottom: 20px;
 		}
 	}
-	.achivment_wrapper{
+
+	.achivment_wrapper {
 		display: flex;
 		flex-wrap: wrap;
 		justify-content: flex-end;
 		position: relative;
 		z-index: 9999;
-		@media #{$md}{
+
+		@media #{$md} {
 			justify-content: center;
 		}
-		@media #{$xs}{
+
+		@media #{$xs} {
 			justify-content: center;
 		}
-		.single_achivment{
-			@media #{$lg}{
+
+		.single_achivment {
+			@media #{$lg} {
 				width: 180px;
-    			height: 180px;
-    			padding-top: 30px;
+				height: 180px;
+				padding-top: 30px;
 			}
-			@media #{$xs}{
+
+			@media #{$xs} {
 				margin: auto;
 				margin-bottom: 40px;
-				&:nth-child(even){
-	    			margin-top: 0;
-	    		}
+
+				&:nth-child(even) {
+					margin-top: 0;
+				}
 			}
+
 			width: 214px;
-  			height: 214px;
-  			border-radius: 50%;
-  			box-shadow: 2.5px 4.33px 15px 0px rgba(0, 0, 0, 0.15);
-  			text-align: center;
-    		padding-top: 40px;
-    		margin-left: 40px;
-    		background: $white;
-    		border: 3px dashed $white;
-    		@include transition(.5s);
-    		&:hover{
-    			border-color: $theme_color;
-    			box-shadow: 5px 8.66px 22px 0px rgba(0, 0, 0, 0.15);
-    		}
-    		&:nth-child(even){
-    			margin-top: 35px;
-    		}
-    		.icon{
-    			margin-bottom: 15px;
-    		}
-    		h3{
-    			margin-bottom: 5px;
-    			color: $theme_color;
-    			font-weight: 600;
-    		}
-		}
-	}
-}
-.deneb_achivement{
-	.section_title{
-		h2{
-			position: relative;
-			&:after{
-			    left: -10px;
+			height: 214px;
+			border-radius: 50%;
+			box-shadow: 2.5px 4.33px 15px 0px rgba(0, 0, 0, 0.15);
+			text-align: center;
+			padding-top: 40px;
+			margin-left: 40px;
+			background: $white;
+			border: 3px dashed $white;
+			@include transition(.5s);
+
+			&:hover {
+				border-color: $theme_color;
+				box-shadow: 5px 8.66px 22px 0px rgba(0, 0, 0, 0.15);
+			}
+
+			&:nth-child(even) {
+				margin-top: 35px;
+			}
+
+			.icon {
+				margin-bottom: 15px;
+			}
+
+			h3 {
+				margin-bottom: 5px;
+				color: $theme_color;
+				font-weight: 600;
 			}
 		}
 	}
 }
+
+.deneb_achivement {
+	.section_title {
+		h2 {
+			position: relative;
+
+			&:after {
+				left: -10px;
+			}
+		}
+	}
+}
+
 // deneb_breadcrumb
-.deneb_breadcrumb{
+.deneb_breadcrumb {
 	padding: 215px 0 145px;
-	.breadcrumb_content{
-		h1{
-			@media #{$xs}{
+
+	.breadcrumb_content {
+		h1 {
+			@media #{$xs} {
 				font-size: 36px;
 			}
 		}
-		ul{
-			li{
+
+		ul {
+			li {
 				display: inline-block;
 				color: $theme_color;
 				text-transform: uppercase;
-				&:after{
+
+				&:after {
 					content: '\f105';
 					font-weight: 900;
 					font-family: "Font Awesome 5 Free";
 					margin-left: 10px;
 					margin-right: 10px;
 				}
-				&:last-child{
-					&:after{
+
+				&:last-child {
+					&:after {
 						display: none;
 					}
 				}
-				a{
+
+				a {
 					text-transform: uppercase;
 					color: $theme_color;
 				}
@@ -194,87 +227,103 @@
 }
 
 // deneb_pagination
-.deneb_pagination{
-	ul{
-		li{
+.deneb_pagination {
+	ul {
+		li {
 			display: inline-block;
 			margin-left: 5px;
 			margin-right: 5px;
-			a{
-				@media #{$xs}{
+
+			a {
+				@media #{$xs} {
 					width: 30px;
 					height: 30px;
 					line-height: 30px;
 				}
+
 				display: block;
 				width: 40px;
 				height: 40px;
 				line-height: 40px;
 				text-align: center;
 				border-radius: 50%;
-  				background-color: rgb(238, 238, 238);
-  				color: #626667;
-  				font-size: 15px;
-  				font-weight: 500;
-  				@include transition(.5s);
-  				&:hover,&:focus{
-  					color: $white;
-			  		background-image: -moz-linear-gradient( 0deg, rgb(255,189,39) 0%, rgb(254,176,0) 100%);
-					background-image: -webkit-linear-gradient( 0deg, rgb(255,189,39) 0%, rgb(254,176,0) 100%);
-					background-image: -ms-linear-gradient( 0deg, rgb(255,189,39) 0%, rgb(254,176,0) 100%);
-  				}
+				background-color: rgb(238, 238, 238);
+				color: #626667;
+				font-size: 15px;
+				font-weight: 500;
+				@include transition(.5s);
+
+				&:hover,
+				&:focus {
+					color: $white;
+					/** Updated to use a variable instead of hardcoding it */
+					background-image: -moz-linear-gradient(0deg, $theme_color 0%, $theme_color 100%);
+					background-image: -webkit-linear-gradient(0deg, $theme_color 0%, $theme_color 100%);
+					background-image: -ms-linear-gradient(0deg, $theme_color 0%, $theme_color 100%);
+				}
 			}
 		}
-		.prev,.next{
-			a{
-				@media #{$xs}{
+
+		.prev,
+		.next {
+			a {
+				@media #{$xs} {
 					width: 45px;
-  					height: 30px;
+					height: 30px;
 				}
+
 				display: block;
 				width: 85px;
-  				height: 40px;
-  				border-radius: 30px;
+				height: 40px;
+				border-radius: 30px;
 			}
 		}
 	}
 }
+
 // deneb_sidebar
-.deneb_sidebar{
-	.widget{
+.deneb_sidebar {
+	.widget {
 		margin-bottom: 50px;
-		.widget-title{
+
+		.widget-title {
 			font-weight: bold;
 			margin-bottom: 20px;
-			&:before{
+
+			&:before {
 				content: '';
-			    display: inline-block;
-			    width: 5px;
-			    height: 30px;
-			    background: #ffb40c;
-			    margin-right: 10px;
-			    vertical-align: middle
+				display: inline-block;
+				width: 5px;
+				height: 30px;
+				background: #ffb40c;
+				margin-right: 10px;
+				vertical-align: middle
 			}
 		}
 	}
-	.widget_search{
-		.form_group{
+
+	.widget_search {
+		.form_group {
 			position: relative;
-			.form_control{
+
+			.form_control {
 				border-radius: 30px;
 				padding: 15px 20px 15px 40px;
 				background: $white;
 				box-shadow: 2.5px 4.33px 15px 0px rgba(0, 0, 0, 0.2);
 			}
-			.fa-search{
+
+			.fa-search {
 				position: absolute;
 				left: 20px;
 				top: 15px;
 			}
-			.search_btn{
-				background: -moz-linear-gradient( 0deg, rgb(255,189,39) 0%, rgb(254,176,0) 100%);
-				background: -webkit-linear-gradient( 0deg, rgb(255,189,39) 0%, rgb(254,176,0) 100%);
-				background: -ms-linear-gradient( 0deg, rgb(255,189,39) 0%, rgb(254,176,0) 100%);
+
+			.search_btn {
+				/** Updated to use a variable instead of hardcoding it */
+				background: -moz-linear-gradient(0deg, $theme_color 0%, $theme_color 100%);
+				background: -webkit-linear-gradient(0deg, $theme_color 0%, $theme_color 100%);
+				background: -ms-linear-gradient(0deg, $theme_color 0%, $theme_color 100%);
 				position: absolute;
 				top: 0;
 				right: 0;
@@ -286,38 +335,45 @@
 			}
 		}
 	}
-	.widget_admin{
-		.admin_box{
-			img{
+
+	.widget_admin {
+		.admin_box {
+			img {
 				border-radius: 8px;
 				margin-bottom: 15px;
 			}
-			p{
+
+			p {
 				margin-bottom: 25px;
 			}
 		}
 	}
+
 	.widget_archive,
-	.widget_categories{
-		ul{
-			li{
+	.widget_categories {
+		ul {
+			li {
 				padding: 7px 8px 7px 20px;
-    			border-radius: 19px;
+				border-radius: 19px;
 				margin-bottom: 10px;
 				@include transition (.5s);
 				cursor: pointer;
-				&:hover{
+
+				&:hover {
 					box-shadow: 2.5px 4.33px 15px 0px rgba(0, 0, 0, 0.15);
-					& a{
-						& span{
+
+					& a {
+						& span {
 							color: $white;
 							background: $theme_color;
 						}
 					}
 				}
-				a{
+
+				a {
 					color: #7f8693;
-					span{
+
+					span {
 						@include transition (.5s);
 						float: right;
 						display: block;
@@ -332,58 +388,70 @@
 			}
 		}
 	}
-	.featured_news{
-		.post_wrap{
+
+	.featured_news {
+		.post_wrap {
 			padding: 10px;
 			display: flex;
 			align-items: center;
 			margin-bottom: 20px;
 			border-radius: 10px;
-			&:hover{
+
+			&:hover {
 				box-shadow: 2.5px 4.33px 15px 0px rgba(0, 0, 0, 0.15);
 			}
-			&:last-child{
+
+			&:last-child {
 				margin-bottom: 0;
 			}
-			.post_img{
-				img{
+
+			.post_img {
+				img {
 					max-width: 128px;
 					height: 108px;
 					border-radius: 8px;
 				}
 			}
-			.post_info{
+
+			.post_info {
 				margin-left: 15px;
-				h3{
+
+				h3 {
 					font-weight: 500;
 					font-size: 18px;
 					margin-bottom: 10px;
-					a{
+
+					a {
 						color: #626667;
 					}
 				}
-				p{
+
+				p {
 					color: $theme_color;
 				}
 			}
 		}
 	}
-	.widget_tag_cloud{
-		ul{
-			li{
+
+	.widget_tag_cloud {
+		ul {
+			li {
 				display: inline-block;
 				margin-right: 10px;
 				margin-bottom: 15px;
-				&:last-child{
+
+				&:last-child {
 					margin-bottom: 0;
 				}
-				a{
+
+				a {
 					display: block;
 					padding: 3px 10px 3px 3px;
 					border: 1px solid #ccc;
 					border-radius: 30px;
 					color: #8e8e8f;
-					span{
+
+					span {
 						display: inline-block;
 						width: 24px;
 						height: 24px;
@@ -395,13 +463,15 @@
 						margin-right: 10px;
 						@include transition(.5s);
 					}
+
 					&:hover,
-					&:focus{
-						span{
+					&:focus {
+						span {
 							color: $white;
-							background-image: -moz-linear-gradient( 90deg, rgb(255,189,39) 0%, rgb(254,176,0) 100%);
-							background-image: -webkit-linear-gradient( 90deg, rgb(255,189,39) 0%, rgb(254,176,0) 100%);
-							background-image: -ms-linear-gradient( 90deg, rgb(255,189,39) 0%, rgb(254,176,0) 100%);
+							/** Updated to use a variable instead of hardcoding it */
+							background-image: -moz-linear-gradient(90deg, $theme_color 0%, $theme_color 100%);
+							background-image: -webkit-linear-gradient(90deg, $theme_color 0%, $theme_color 100%);
+							background-image: -ms-linear-gradient(90deg, $theme_color 0%, $theme_color 100%);
 						}
 					}
 				}
