--- a/_sass/_project.scss
+++ b/_sass/_project.scss
@@ -19,7 +19,7 @@
 			}
 			/** Updated to use a variable instead of hardcoding it */
 			&.active_btn{
-				box-shadow: 4px 6.928px 15px 0px rgba(254, 176, 0, 0.4);
+				box-shadow: 4px 6.928px 15px 0px $shadow_color;
 				background-image: -moz-linear-gradient( 180deg, $theme_color 0%, $theme_color 100%);
 				background-image: -webkit-linear-gradient( 180deg, $theme_color 0%, $theme_color 100%);
 				background-image: -ms-linear-gradient( 180deg, $theme_color 0%, $theme_color 100%);
