--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -39,16 +39,16 @@
 					    line-height: 30px;
 					    text-align: center;
 					    border-radius: 50%;
-					    background-color: #f9e6d4;
-					    color: #fba543;
+					    background-color: $theme_color;
+					    color: $shadow_color;
 					    font-size: 14px;
 					    @include transition( all .5s);
 					    &:hover,&:focus{
-							background-image: -moz-linear-gradient( 0deg, rgb(255,189,39) 0%, rgb(254,176,0) 100%);
-							background-image: -webkit-linear-gradient( 0deg, rgb(255,189,39) 0%, rgb(254,176,0) 100%);
-							background-image: -ms-linear-gradient( 0deg, rgb(255,189,39) 0%, rgb(254,176,0) 100%);
+							background-image: -moz-linear-gradient( 0deg, $shadow_color 0%, $shadow_color 100%);
+							background-image: -webkit-linear-gradient( 0deg, $shadow_color 0%, $shadow_color 100%);
+							background-image: -ms-linear-gradient( 0deg, $shadow_color 0%, $shadow_color 100%);
 					    	color: $white;
-					    	box-shadow: 2.5px 4.33px 15px 0px rgba(254, 176, 0, 0.4);
+					    	box-shadow: 2.5px 4.33px 15px 0px $theme_color;
 					    }
 	    			}
 	    		}
