--- a/_sass/_about.scss
+++ b/_sass/_about.scss
@@ -145,7 +145,7 @@
 						width: 20px;
 						height: 20px;
 						border-radius: 50%;
-						background-color: #f89e00;
+						background-color: $shadow_color;
 						&:after{
 							position: absolute;
 						    top: -7px;
@@ -154,7 +154,7 @@
 						    width: 33px;
 						    height: 33px;
 						    border-radius: 50%;
-						    background-color: #f89e00;
+						    background-color: $shadow_color;
 						    opacity: .2;
 						}
 					}
@@ -222,9 +222,9 @@
   			height: 75px;
   			text-align: center;
   			border-radius: 50%;
-			background-image: -moz-linear-gradient( 180deg, rgb(255,189,39) 0%, rgb(254,176,0) 100%);
-			background-image: -webkit-linear-gradient( 180deg, rgb(255,189,39) 0%, rgb(254,176,0) 100%);
-			background-image: -ms-linear-gradient( 180deg, rgb(255,189,39) 0%, rgb(254,176,0) 100%);
+			background-image: -moz-linear-gradient( 180deg, $shadow_color 0%, $shadow_color 100%);
+			background-image: -webkit-linear-gradient( 180deg, $shadow_color 0%, $shadow_color 100%);
+			background-image: -ms-linear-gradient( 180deg, $shadow_color 0%, $shadow_color 100%);
   			box-shadow: 2.5px 4.33px 15px 0px rgba(0, 0, 0, 0.15);
   			margin: 0 auto;
     		padding-top: 17px;
@@ -243,9 +243,9 @@
     		}
     		&:after{
     			content: '';
-				background-image: -moz-linear-gradient( 180deg, rgb(255,189,39) 0%, rgb(254,176,0) 100%);
-				background-image: -webkit-linear-gradient( 180deg, rgb(255,189,39) 0%, rgb(254,176,0) 100%);
-				background-image: -ms-linear-gradient( 180deg, rgb(255,189,39) 0%, rgb(254,176,0) 100%);
+				background-image: -moz-linear-gradient( 180deg, $shadow_color 0%, $shadow_color 100%);
+				background-image: -webkit-linear-gradient( 180deg, $shadow_color 0%, $shadow_color 100%);
+				background-image: -ms-linear-gradient( 180deg, $shadow_color 0%, $shadow_color 100%);
     			width: 110px;
   				height: 110px;
   				border-radius: 50%;
@@ -274,10 +274,10 @@
 			box-shadow: 2.5px 4.33px 15px 0px rgba(0, 0, 0, 0.15);
 			@include transition(.5s);
 			&:hover{
-				background-image: -moz-linear-gradient( 180deg, rgb(255,189,39) 0%, rgb(254,176,0) 100%);
-				background-image: -webkit-linear-gradient( 180deg, rgb(255,189,39) 0%, rgb(254,176,0) 100%);
-				background-image: -ms-linear-gradient( 180deg, rgb(255,189,39) 0%, rgb(254,176,0) 100%);
-				box-shadow: 2.5px 4.33px 15px 0px #feb000;
+				background-image: -moz-linear-gradient( 180deg, $shadow_color 0%, $shadow_color 100%);
+				background-image: -webkit-linear-gradient( 180deg, $shadow_color 0%, $shadow_color 100%);
+				background-image: -ms-linear-gradient( 180deg, $shadow_color 0%, $shadow_color 100%);
+				box-shadow: 2.5px 4.33px 15px 0px $theme_color;
 				p{
 					color: $white;
 				}
