Updated the social links.

--- a/_sass/_blog.scss
+++ b/_sass/_blog.scss
@@ -147,7 +147,7 @@
 						display: inline-block;
 						margin-right: 25px;
 						i{
-							color: #ff8801;
+							color: $theme_color;
 							margin-right: 10px;
 						}
 						a{
