Updated the main page achievement section

--- a/_includes/services-2.html
+++ b/_includes/services-2.html
@@ -10,19 +10,19 @@
 						      	<a class="nav-link active" data-toggle="tab" href="#web"><img src="{{ "/assets/images/icon_11.png" | absolute_url }}" alt="web solution"><span>Web Solution</span></a>
 						    </li>
 						    <li class="nav-item">
-						      	<a class="nav-link" data-toggle="tab" href="#strategy"><img src="{{ "/assets/images/icon_12.png" | absolute_url }}" alt="Strategy & Research"><span>Strategy & Research</span></a>
+						      	<a class="nav-link" data-toggle="tab" href="#strategy"><img src="{{ "/assets/images/icon_12.png" | absolute_url }}" alt="Advocacy"><span>Strategy & Research</span></a>
 						    </li>
 						    <li class="nav-item">
-						      	<a class="nav-link" data-toggle="tab" href="#development"><img src="{{ "/assets/images/icon_13.png" | absolute_url }}" alt="Web Development"><span>Web Development</span></a>
+						      	<a class="nav-link" data-toggle="tab" href="#development"><img src="{{ "/assets/images/icon_13.png" | absolute_url }}" alt="Virginia"><span>Web Development</span></a>
 						    </li>
 						    <li class="nav-item">
-						      	<a class="nav-link" data-toggle="tab" href="#app"><img src="{{ "/assets/images/icon_14.png" | absolute_url }}" alt="App Design"><span>App Design</span></a>
+						      	<a class="nav-link" data-toggle="tab" href="#app"><img src="{{ "/assets/images/icon_14.png" | absolute_url }}" alt=""><span>IEP & 504 Support</span></a>
 						    </li>
 						    <li class="nav-item">
-						      	<a class="nav-link" data-toggle="tab" href="#marketing"><img src="{{ "/assets/images/icon_15.png" | absolute_url }}" alt="Digital Marketing"><span>Digital Marketing</span></a>
+						      	<a class="nav-link" data-toggle="tab" href="#marketing"><img src="{{ "/assets/images/icon_15.png" | absolute_url }}" alt="School Discipline and Special Education"><span>Mediation and Dispute Resolution</span></a>
 						    </li>
 						    <li class="nav-item">
-						      	<a class="nav-link" data-toggle="tab" href="#analysis"><img src="{{ "/assets/images/icon_16.png" | absolute_url }}" alt="Business Analysis"><span>Business Analysis</span></a>
+						      	<a class="nav-link" data-toggle="tab" href="#analysis"><img src="{{ "/assets/images/icon_16.png" | absolute_url }}" alt="Business Analysis"><span>Advocacy & Monitoring</span></a>
 						    </li>
 						</ul>
 					</div>
