added images, corrected contact us wording, updated options on form

--- a/_includes/contact-form-2.html
+++ b/_includes/contact-form-2.html
@@ -33,17 +33,30 @@
 						</div>
 						<div class="col-lg-6">
 							<div class="form_group">
-								<input type="text" class="form_control" placeholder="Project Title" name="subject" required>
+								<input type="text" class="form_control" placeholder="Student Name" name="subject" required>
+							</div>
+						</div>
+						<div class="col-lg-6">
+							<div class="form_group">
+								<input type="text" class="form_control" placeholder="School District" name="subject" required>
+							</div>
+						</div>
+						<div class="col-lg-6">
+							<div class="form_group">
+								<input type="text" class="form_control" placeholder="School Name" name="subject" required>
 							</div>
 						</div>
 						<div class="col-lg-6">
 							<div class="form_group">
 								<select name="service_name">
 									<option value="">Choose service</option>
-									<option value="Web Design">Web Design</option>
-									<option value="Web Development">Web Development</option>
-									<option value="Apps Development">Apps Development</option>
-									<option value="Graphic Design">Graphic Design</option>
+									<option value="Eligibility">Eligibility</option>
+									<option value="504 Plan">504 Plan</option>
+									<option value="School Discipline Suspension">School Discipline Suspension</option>
+									<option value="School Discipline Expulsion">School Discipline Expulsion</option>
+									<option value="School Discipline Suspension">Manefestation Determination Review</option>
+									<option value="School Discipline Hearing">SChool Discipline Hearing</option>
+									<option value="Other">Other</option>
 								</select>
 							</div>
 						</div>
