--- a/_includes/contact-area.html
+++ b/_includes/contact-area.html
@@ -38,7 +38,7 @@
 							</div>
 							<div class="col-lg-12">
 								<div class="form_group">
-									<textarea class="form_control" placeholder="Message" name="message"></textarea>
+									<textarea class="form_control" placeholder="How can we help?" name="How can we help?"></textarea>
 								</div>
 							</div>
 							<div class="col-lg-12">
