--- a/_includes/contact-area.html
+++ b/_includes/contact-area.html
@@ -36,6 +36,16 @@
 									<input type="text" class="form_control" placeholder="Phone No." name="phone" required>
 								</div>
 							</div>
+							<div class="col-lg-6">
+								<div class="form_group">
+									<input type="email" class="form_control" placeholder="Student Name" name="Student Name" required>
+								</div>
+							</div>
+							<div class="col-lg-6">
+								<div class="form_group">
+									<input type="text" class="form_control" placeholder="School/School District" name="School/School District" required>
+								</div>
+							</div>
 							<div class="col-lg-12">
 								<div class="form_group">
 									<textarea class="form_control" placeholder="How can we help?" name="How can we help?"></textarea>
