--- a/_includes/map.html
+++ b/_includes/map.html
@@ -1,6 +1,6 @@
 <!-- Start deneb_map section -->
 <section class="deneb_map">
 	<div class="map_box">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d3071.2910802067827!2d90.45905169331171!3d23.691532202989123!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sbd!4v1577214205224!5m2!1sen!2sbd"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12427.990547775611!2d-77.3378005!3d38.8554111!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b64f1f2e98d883%3A0x27599f2d49346b42!2sThe%20Law%20Office%20of%20Grace%20E.%20Kim%2C%20P.C.!5e0!3m2!1sen!2sus!4v1730140757874!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
 </section>
