--- a/_includes/contact-area.html
+++ b/_includes/contact-area.html
@@ -13,8 +13,7 @@
 					<p>{{ page.contact_area.description }}</p>
 				</div>
 				<div class="contact_form">
-					<!--form method="POST" action="https://formsubmit.co/{{ site.email }}"-->
-					<form method="POST" action="https://formsubmit.co/njdatta@gekimlaw.com">
+					<form method="POST" action="https://formsubmit.co/{{ site.email }}">
 						<div class="row">
 							<div class="col-lg-6">
 								<div class="form_group">
