updated categories for projects and will add links later

--- a/_includes/latest-projects.html
+++ b/_includes/latest-projects.html
@@ -8,7 +8,7 @@
 			<div class="col-lg-12">
 				<div class="section_title text-center">
 					<h2>Find us on the web</h2>
-					<p>Our law firm has been featured in articles, presentations and webinars</p>
+					<p>Our law firm has been featured in articles, presentations and webinars. Please check back as we are updating our site</p>
 				</div>
 			</div>
 		</div>
@@ -19,53 +19,53 @@
 					<button class="project_btn" data-filter=".cat1">Articles</button>
 					<button class="project_btn" data-filter=".cat2">Presentations</button>
 					<button class="project_btn" data-filter=".cat3">Webinars</button>
-					<button class="project_btn" data-filter=".cat4">SEO</button>
+					<button class="project_btn" data-filter=".cat4">Other</button>
 					<button class="project_btn" data-filter=".cat5">COPAA</button>
 				</div>
 			</div>
 		</div>
 		<div class="projects_slider_content">
-			<div class="single_project cat1 cat5">
+			<div class="single_project cat1">
 				<div class="grid_item">
 					<div class="deneb_img">
 						<img src="{{ "/assets/images/portfolio_1.jpg" | absolute_url }}" class="img-fluid" alt="">
 					</div>
 					<div class="deneb_info">
-						<h4><a href="#">Design & Develop</a></h4>
-						<p>Design</p>
+						<h4><a href="#">OAR Article</a></h4>
+						<p>Article</p>
 					</div>
 				</div>
 			</div>
-			<div class="single_project cat2 cat4">
+			<div class="single_project cat2 cat3">
 				<div class="grid_item">
 					<div class="deneb_img">
 						<img src="{{ "/assets/images/portfolio_2.jpg" | absolute_url }}" class="img-fluid" alt="">
 					</div>
 					<div class="deneb_info">
-						<h4><a href="#">Product Display</a></h4>
-						<p>Branding</p>
+						<h4><a href="#">Partners In Promise</a></h4>
+						<p>Webinar</p>
 					</div>
 				</div>
 			</div>
-			<div class="single_project cat3 cat1">
+			<div class="single_project cat2 cat3 ">
 				<div class="grid_item">
 					<div class="deneb_img">
 						<img src="{{ "/assets/images/portfolio_3.jpg" | absolute_url }}" class="img-fluid" alt="">
 					</div>
 					<div class="deneb_info">
-						<h4><a href="#">Traveling App</a></h4>
-						<p>Mobile</p>
+						<h4><a href="#">Partners in promise</a></h4>
+						<p>Webinar</p>
 					</div>
 				</div>
 			</div>
-			<div class="single_project cat1 cat5">
+			<div class="single_project cat1 ">
 				<div class="grid_item">
 					<div class="deneb_img">
 						<img src="{{ "/assets/images/portfolio_1.jpg" | absolute_url }}" class="img-fluid" alt="">
 					</div>
 					<div class="deneb_info">
-						<h4><a href="#">Design & Develop</a></h4>
-						<p>Design</p>
+						<h4><a href="#">OAR Article</a></h4>
+						<p>Article</p>
 					</div>
 				</div>
 			</div>
