corrected spelling of school in the contact us form

--- a/_includes/contact-form-2.html
+++ b/_includes/contact-form-2.html
@@ -54,7 +54,7 @@
 									<option value="School Discipline Suspension">School Discipline Suspension</option>
 									<option value="School Discipline Expulsion">School Discipline Expulsion</option>
 									<option value="School Discipline Suspension">Manefestation Determination Review</option>
-									<option value="School Discipline Hearing">SChool Discipline Hearing</option>
+									<option value="School Discipline Hearing">School Discipline Hearing</option>
 									<option value="Other">Other</option>
 								</select>
 							</div>
