added IEP to the service option dropdown on the contact us form

--- a/_includes/contact-form-2.html
+++ b/_includes/contact-form-2.html
@@ -50,6 +50,7 @@
 								<select name="service_name">
 									<option value="">Choose service</option>
 									<option value="Eligibility">Eligibility</option>
+									<option value="IEP">IEP - Individualized Education Plan</option>
 									<option value="504 Plan">504 Plan</option>
 									<option value="School Discipline Suspension">School Discipline Suspension</option>
 									<option value="School Discipline Expulsion">School Discipline Expulsion</option>
