--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -3,5 +3,5 @@ layout: default
 ---
 
 {% include page-header.html %}
-{% include contact-form-2.html %}
+{% include contact-gekim-law.html %}
 {% include map.html %}
