added images, updated layouts and added our team page. updated index and blog pages and the header wording

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -4,7 +4,4 @@ layout: default
 
 {% include page-header.html %}
 {% include about.html section_class="about_v2" %}
-{% include our-skills.html %}
-{% include our-experience.html %}
-{% include testimonials.html %}
-{% include latest-blog-posts.html %}
+{% include our-team.html section_class="about_v2" %}
