--- a/_includes/about.html
+++ b/_includes/about.html
@@ -2,19 +2,38 @@
 <section class="deneb_about {% if include.section_class %} {{include.section_class}} {% else %} about_v1 {% endif %}">
 	<div class="container">
 		<div class="row align-items-center">
+			{% for section in page.sections %}
+			{% capture thecycle %}{% cycle 'odd', 'even' %}{% endcapture %}
+			{% if thecycle == 'odd' %}
 			<div class="col-lg-5">
 				<div class="deneb_img_box wow fadeInLeft">
-					<img src="{{ page.about.image | absolute_url }}" class="img-fluid" alt="">
+					<img src="{{ section.image | absolute_url }}" class="img-fluid" alt="">
 				</div>
 			</div>
 			<div class="col-lg-7">
 				<div class="deneb_content_box wow fadeInRight">
-					<h2>{{ page.about.heading }}</h2>
-					<p>{{ page.about.text }}</p>
-					<p>{{ page.about.text2 }}</p>
-					<a href="{{ page.about.button.link }}" class="deneb_btn">{{ page.about.button.name }}</a>
+					<h2>{{ section.heading }}</h2>
+					<p>{{ section.text }}</p>
+					<p>{{ section.text2 }}</p>
+					<a href="{{ section.button.link }}" class="deneb_btn">{{ section.button.name }}</a>
 				</div>
 			</div>
+			{% else %}
+			<div class="col-lg-7">
+				<div class="deneb_content_box wow fadeInLeft">
+					<h2>{{ section.heading }}</h2>
+					<p>{{ section.text }}</p>
+					<p>{{ section.text2 }}</p>
+					<a href="{{ section.button.link }}" class="deneb_btn">{{ section.button.name }}</a>
+				</div>
+			</div>
+			<div class="col-lg-5">
+				<div class="deneb_img_box wow fadeInRight">
+					<img src="{{ section.image | absolute_url }}" class="img-fluid" alt="">
+				</div>
+			</div>
+			{% endif %}
+			{% endfor %}
 		</div>
 	</div>
 </section>
