--- a/_includes/portfolios.html
+++ b/_includes/portfolios.html
@@ -13,11 +13,11 @@
 	<div class="col-lg-12">
 		<div class="project_button_2 text-center">
 			<button class="project_btn active_btn" data-filter="*">all</button>
-			<button class="project_btn" data-filter=".cat1">Web Design</button>
-			<button class="project_btn" data-filter=".cat2">Web Development</button>
-			<button class="project_btn" data-filter=".cat3">Branding</button>
-			<button class="project_btn" data-filter=".cat4">SEO</button>
-			<button class="project_btn" data-filter=".cat5">Mobile App</button>
+			<button class="project_btn" data-filter=".cat1">Articles</button>
+			<button class="project_btn" data-filter=".cat2">Webinars</button>
+			<button class="project_btn" data-filter=".cat3">Podcasts</button>
+			<button class="project_btn" data-filter=".cat4">COPAA</button>
+			<button class="project_btn" data-filter=".cat5">Other</button>
 		</div>
 	</div>
 </div>
@@ -28,8 +28,8 @@
 				<img src="{{ "/assets/images/portfolio_1.jpg" | absolute_url }}" class="img-fluid" alt="Design & Develop"/>
 			</div>
 			<div class="deneb_info">
-				<h4><a href="#">Design & Develop</a></h4>
-				<p>Design</p>
+				<h4><a href="#">OAR Article</a></h4>
+				<p>Article</p>
 			</div>
 		</div>
 	</div>
@@ -39,41 +39,41 @@
 				<img src="{{ "/assets/images/portfolio_2.jpg" | absolute_url }}" class="img-fluid" alt="Product Display"/>
 			</div>
 			<div class="deneb_info">
-				<h4><a href="#">Product Display</a></h4>
-				<p>Design</p>
+				<h4><a href="#">Partners In Promise</a></h4>
+				<p>Webinar</p>
 			</div>
 		</div>
 	</div>
 	<div class="col-lg-4 col-md-6 col-sm-12 single_project cat3">
 		<div class="grid_item">
 			<div class="deneb_img">
-				<img src="{{ "/assets/images/portfolio_3.jpg" | absolute_url }}" class="img-fluid" alt="Design & Develop"/>
+				<img src="{{ "/assets/images/portfolio_4.jpg" | absolute_url }}" class="img-fluid" alt="Design & Develop"/>
 			</div>
 			<div class="deneb_info">
-				<h4><a href="#">Design & Develop</a></h4>
-				<p>Design</p>
+				<h4><a href="#">Partners In Promise</a></h4>
+				<p>Podcast</p>
 			</div>
 		</div>
 	</div>
 	<div class="col-lg-4 col-md-6 col-sm-12 single_project cat4">
 		<div class="grid_item">
 			<div class="deneb_img">
-				<img src="{{ "/assets/images/portfolio_4.jpg" | absolute_url }}" class="img-fluid" alt="Design & Develop"/>
+				<img src="{{ "/assets/images/squarecopaa.png" | absolute_url }}" class="img-fluid" alt="Design & Develop"/>
 			</div>
 			<div class="deneb_info">
-				<h4><a href="#">Design & Develop</a></h4>
-				<p>Design</p>
+				<h4><a href="#">Featured in COPAA</a></h4>
+				<p>Council of Parent Advocates and Attorneys</p>
 			</div>
 		</div>
 	</div>
-	<div class="col-lg-4 col-md-6 col-sm-12 single_project cat5">
+	<div class="col-lg-4 col-md-6 col-sm-12 single_project cat1">
 		<div class="grid_item">
 			<div class="deneb_img">
 				<img src="{{ "/assets/images/portfolio_5.jpg" | absolute_url }}" class="img-fluid" alt="Design & Develop"/>
 			</div>
 			<div class="deneb_info">
-				<h4><a href="#">Design & Develop</a></h4>
-				<p>Design</p>
+				<h4><a href="#">OAR Article</a></h4>
+				<p>Article</p>
 			</div>
 		</div>
 	</div>
@@ -83,19 +83,19 @@
 				<img src="{{ "/assets/images/portfolio_6.jpg" | absolute_url }}" class="img-fluid" alt="Design & Develop"/>
 			</div>
 			<div class="deneb_info">
-				<h4><a href="#">Design & Develop</a></h4>
-				<p>Design</p>
+				<h4><a href="#">Comming soon</a></h4>
+				<p>Watch this space</p>
 			</div>
 		</div>
 	</div>
-	<div class="col-lg-4 col-md-6 col-sm-12 single_project cat4">
+	<div class="col-lg-4 col-md-6 col-sm-12 single_project cat2">
 		<div class="grid_item">
 			<div class="deneb_img">
 				<img src="{{ "/assets/images/portfolio_7.jpg" | absolute_url }}" class="img-fluid" alt="Design & Develop"/>
 			</div>
 			<div class="deneb_info">
-				<h4><a href="#">Design & Develop</a></h4>
-				<p>Design</p>
+				<h4><a href="#">Coming soon</a></h4>
+				<p>Watch this space</p>
 			</div>
 		</div>
 	</div>
@@ -105,8 +105,8 @@
 				<img src="{{ "/assets/images/portfolio_8.jpg" | absolute_url }}" class="img-fluid" alt="Design & Develop"/>
 			</div>
 			<div class="deneb_info">
-				<h4><a href="#">Design & Develop</a></h4>
-				<p>Design</p>
+				<h4><a href="#">Comming soon</a></h4>
+				<p>Watch this space</p>
 			</div>
 		</div>
 	</div>
@@ -116,8 +116,8 @@
 				<img src="{{ "/assets/images/portfolio_9.jpg" | absolute_url }}" class="img-fluid" alt="Design & Develop"/>
 			</div>
 			<div class="deneb_info">
-				<h4><a href="#">Design & Develop</a></h4>
-				<p>Design</p>
+				<h4><a href="#">Comming soon</a></h4>
+				<p>Watch this space</p>
 			</div>
 		</div>
 	</div>
