updated header, the links in the footer and the wording in the blog post (blog not up yet)

--- a/_includes/latest-projects.html
+++ b/_includes/latest-projects.html
@@ -31,8 +31,8 @@
 						<img src="{{ "/assets/images/portfolio_1.jpg" | absolute_url }}" class="img-fluid" alt="">
 					</div>
 					<div class="deneb_info">
-						<h4><a href="#">OAR Article</a></h4>
-						<p>Article</p>
+						<h4><a href="/https://researchautism.org/oaracle-newsletter/the-iep-process-insights-from-a-special-education-attorney/">OAR Article - The IEP Process: Insights from a Special Education Attorney</a></h4>
+						<p>OAR Article</p>
 					</div>
 				</div>
 			</div>
@@ -42,7 +42,7 @@
 						<img src="{{ "/assets/images/portfolio_2.jpg" | absolute_url }}" class="img-fluid" alt="">
 					</div>
 					<div class="deneb_info">
-						<h4><a href="#">Partners In Promise</a></h4>
+						<h4><a href="www.google.com">Partners In Promise</a></h4>
 						<p>Webinar</p>
 					</div>
 				</div>
