--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -29,6 +29,7 @@
 						</div>
 						<ul>
 							<li><a href="/contact">Contact Us</a></li>
+							<li><a href="/about">About Us</a></li>
 						</ul>
 					</div>
 				</div>
