updated the featured section (called portfolios) added two blog images and edited the wording / format in blog posts so it looks consistent. added featured back into the header and footer of the site

--- a/_includes/portfolios.html
+++ b/_includes/portfolios.html
@@ -17,7 +17,6 @@
 			<button class="project_btn" data-filter=".cat2">Webinars</button>
 			<button class="project_btn" data-filter=".cat3">Podcasts</button>
 			<button class="project_btn" data-filter=".cat4">COPAA</button>
-			<button class="project_btn" data-filter=".cat5">Other</button>
 		</div>
 	</div>
 </div>
@@ -25,10 +24,10 @@
 	<div class="col-lg-4 col-md-6 col-sm-12 single_project cat1">
 		<div class="grid_item">
 			<div class="deneb_img">
-				<img src="{{ "/assets/images/portfolio_1.jpg" | absolute_url }}" class="img-fluid" alt="Design & Develop"/>
+				<img src="{{ "/assets/images/portfolio_1.jpg" | absolute_url }}" class="img-fluid" alt="OAR Article - The IEP Process: Insights from a Special Education Attorney"/>
 			</div>
 			<div class="deneb_info">
-				<h4><a href="#">OAR Article</a></h4>
+				<h4><a href="https://researchautism.org/oaracle-newsletter/the-iep-process-insights-from-a-special-education-attorney/">OAR Article - The IEP Process: Insights from a Special Education Attorney</a></h4>
 				<p>Article</p>
 			</div>
 		</div>
@@ -36,10 +35,10 @@
 	<div class="col-lg-4 col-md-6 col-sm-12 single_project cat2">
 		<div class="grid_item">
 			<div class="deneb_img">
-				<img src="{{ "/assets/images/portfolio_2.jpg" | absolute_url }}" class="img-fluid" alt="Product Display"/>
+				<img src="{{ "/assets/images/portfolio_2.jpg" | absolute_url }}" class="img-fluid" alt="Partners In Promise Webinar - Trust Your Gut - When to Ask for Legal Advice"/>
 			</div>
 			<div class="deneb_info">
-				<h4><a href="#">Partners In Promise</a></h4>
+				<h4><a href="https://www.youtube.com/watch?v=YTpI_w3YlYw">Partners In Promise - Trust Your Gut - When to Ask for Legal Advice</a></h4>
 				<p>Webinar</p>
 			</div>
 		</div>
@@ -47,10 +46,11 @@
 	<div class="col-lg-4 col-md-6 col-sm-12 single_project cat3">
 		<div class="grid_item">
 			<div class="deneb_img">
-				<img src="{{ "/assets/images/portfolio_4.jpg" | absolute_url }}" class="img-fluid" alt="Design & Develop"/>
+				<img src="{{ "/assets/images/portfolio_4.jpg" | absolute_url }}" class="img-fluid" alt="Partners In Promise Podcast- IEPs and the Importance of Data Collection"/>
 			</div>
 			<div class="deneb_info">
-				<h4><a href="#">Partners In Promise</a></h4>
+				<h4><a href="https://podcasts.apple.com/us/podcast/ieps-and-the-importance-of-data-collection/id1576261817?i=1000648875067">Partners In Promise - IEPs and the Importance of Data Collection
+				</a></h4>
 				<p>Podcast</p>
 			</div>
 		</div>
@@ -58,21 +58,21 @@
 	<div class="col-lg-4 col-md-6 col-sm-12 single_project cat4">
 		<div class="grid_item">
 			<div class="deneb_img">
-				<img src="{{ "/assets/images/squarecopaa.png" | absolute_url }}" class="img-fluid" alt="Design & Develop"/>
+				<img src="{{ "/assets/images/squarecopaa.png" | absolute_url }}" class="img-fluid" alt="Our law firm being featured by the Council of Parent Advocates and Attorneys (COPAA)"/>
 			</div>
 			<div class="deneb_info">
-				<h4><a href="#">Featured in COPAA</a></h4>
-				<p>Council of Parent Advocates and Attorneys</p>
+				<h4><a href="https://www.linkedin.com/posts/council-of-parent-attorneys-and-advocates-inc._copaa-is-pleased-to-spotlight-a-recent-victory-activity-7211688834256809984-MfU1">Featured in COPAA</a></h4>
+				<p>Council of Parent Advocates <br> and Attorneys</p>
 			</div>
 		</div>
 	</div>
 	<div class="col-lg-4 col-md-6 col-sm-12 single_project cat1">
 		<div class="grid_item">
 			<div class="deneb_img">
-				<img src="{{ "/assets/images/portfolio_5.jpg" | absolute_url }}" class="img-fluid" alt="Design & Develop"/>
+				<img src="{{ "/assets/images/portfolio_5.jpg" | absolute_url }}" class="img-fluid" alt="OAR Article - Strengthening Support for the Military Autism Community"/>
 			</div>
 			<div class="deneb_info">
-				<h4><a href="#">OAR Article</a></h4>
+				<h4><a href="https://researchautism.org/oaracle-newsletter/strengthening-support-for-the-military-autism-community/">OAR Article - Strengthening Support for the Military Autism Community</a></h4>
 				<p>Article</p>
 			</div>
 		</div>
@@ -80,7 +80,7 @@
 	<div class="col-lg-4 col-md-6 col-sm-12 single_project cat1">
 		<div class="grid_item">
 			<div class="deneb_img">
-				<img src="{{ "/assets/images/portfolio_6.jpg" | absolute_url }}" class="img-fluid" alt="Design & Develop"/>
+				<img src="{{ "/assets/images/portfolio_6.jpg" | absolute_url }}" class="img-fluid" alt="Coming soon"/>
 			</div>
 			<div class="deneb_info">
 				<h4><a href="#">Comming soon</a></h4>
@@ -91,18 +91,18 @@
 	<div class="col-lg-4 col-md-6 col-sm-12 single_project cat2">
 		<div class="grid_item">
 			<div class="deneb_img">
-				<img src="{{ "/assets/images/portfolio_7.jpg" | absolute_url }}" class="img-fluid" alt="Design & Develop"/>
+				<img src="{{ "/assets/images/portfolio_2.jpg" | absolute_url }}" class="img-fluid" alt="Partners In Promise webinar- End of the Year IEP & Extended School Year Advice"/>
 			</div>
 			<div class="deneb_info">
-				<h4><a href="#">Coming soon</a></h4>
-				<p>Watch this space</p>
+				<h4><a href="https://www.youtube.com/watch?v=d8dxTuTA2mI">Partners In Promise - End of the Year IEP & Extended School Year Advice</a></h4>
+				<p>Webinar</p>
 			</div>
 		</div>
 	</div>
 	<div class="col-lg-4 col-md-6 col-sm-12 single_project cat2">
 		<div class="grid_item">
 			<div class="deneb_img">
-				<img src="{{ "/assets/images/portfolio_8.jpg" | absolute_url }}" class="img-fluid" alt="Design & Develop"/>
+				<img src="{{ "/assets/images/portfolio_8.jpg" | absolute_url }}" class="img-fluid" alt="Coming soon"/>
 			</div>
 			<div class="deneb_info">
 				<h4><a href="#">Comming soon</a></h4>
@@ -113,7 +113,7 @@
 	<div class="col-lg-4 col-md-6 col-sm-12 single_project cat3">
 		<div class="grid_item">
 			<div class="deneb_img">
-				<img src="{{ "/assets/images/portfolio_9.jpg" | absolute_url }}" class="img-fluid" alt="Design & Develop"/>
+				<img src="{{ "/assets/images/portfolio_9.jpg" | absolute_url }}" class="img-fluid" alt="Coming soon"/>
 			</div>
 			<div class="deneb_info">
 				<h4><a href="#">Comming soon</a></h4>
