--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -30,6 +30,7 @@
 						<ul>
 							<li><a href="/contact">Contact Us</a></li>
 							<li><a href="/about">About Us</a></li>
+							<li><a href="/featured">Featured</a></li>
 						</ul>
 					</div>
 				</div>
