changed title wording on the bullying blog post and added blog links back into the header and footer

--- a/_includes/portfolios.html
+++ b/_includes/portfolios.html
@@ -61,7 +61,8 @@
 				<img src="{{ "/assets/images/squarecopaa.png" | absolute_url }}" class="img-fluid" alt="Our law firm being featured by the Council of Parent Advocates and Attorneys (COPAA)"/>
 			</div>
 			<div class="deneb_info">
-				<h4><a href="https://www.linkedin.com/posts/council-of-parent-attorneys-and-advocates-inc._copaa-is-pleased-to-spotlight-a-recent-victory-activity-7211688834256809984-MfU1">Featured in COPAA</a></h4>
+				<h4><a href="https://www.linkedin.com/posts/council-of-parent-attorneys-and-advocates-inc._copaa-is-pleased-to-spotlight-a-recent-victory-activity-7211688834256809984-MfU1">
+					COPAA - Landmark Victory for a Child with Disabilities in Virginia</a></h4>
 				<p>Council of Parent Advocates <br> and Attorneys</p>
 			</div>
 		</div>
