--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -28,9 +28,11 @@
 							<h4>Essential Links</h4>
 						</div>
 						<ul>
-							<li><a href="/contact">Contact Us</a></li>
-							<li><a href="/about">About Us</a></li>
+							<li><a href="/contact">Contact us</a></li>
+							<li><a href="/about">About us</a></li>
+							<li><a href="/ourteam">Our team</a></li>
 							<li><a href="/featured">Featured</a></li>
+							<li><a href="/blog">Blog</a></li>
 						</ul>
 					</div>
 				</div>
