Changed wording for ge kim law title for google searches and corrected coming soon spelling

--- a/_includes/portfolios.html
+++ b/_includes/portfolios.html
@@ -84,7 +84,7 @@
 				<img src="{{ "/assets/images/portfolio_6.jpg" | absolute_url }}" class="img-fluid" alt="Coming soon"/>
 			</div>
 			<div class="deneb_info">
-				<h4><a href="#">Comming soon</a></h4>
+				<h4><a href="#">Coming soon</a></h4>
 				<p>Watch this space</p>
 			</div>
 		</div>
@@ -106,7 +106,7 @@
 				<img src="{{ "/assets/images/portfolio_8.jpg" | absolute_url }}" class="img-fluid" alt="Coming soon"/>
 			</div>
 			<div class="deneb_info">
-				<h4><a href="#">Comming soon</a></h4>
+				<h4><a href="#">Coming soon</a></h4>
 				<p>Watch this space</p>
 			</div>
 		</div>
@@ -117,7 +117,7 @@
 				<img src="{{ "/assets/images/portfolio_9.jpg" | absolute_url }}" class="img-fluid" alt="Coming soon"/>
 			</div>
 			<div class="deneb_info">
-				<h4><a href="#">Comming soon</a></h4>
+				<h4><a href="#">Coming soon</a></h4>
 				<p>Watch this space</p>
 			</div>
 		</div>
