--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
 				<div class="col-lg-4 col-md-6 col-12">
 					<div class="widget widegt_about mb-md-4 mb-lg-0">
 						<div class="widget_title">
-							<img src="{{site.site_logo}}" class="img-fluid" alt="{{site.title}}"/>
+							<img src="/assets/images/footer_logo.png" class="img-fluid" alt="{{site.title}}"/>
 						</div>
 						<p>Contact us today to schedule an initial consultation regarding your child's case.</p>
 						<ul class="social">
